github_data_collector/src/data/issue_comment/LionSec_xerosploit.txt
Traceback (most recent call last):
	3: from /usr/local/bin/xettercap:23:in `<main>'
	2: from /usr/local/bin/xettercap:23:in `load'
	1: from /var/lib/gems/2.5.0/gems/xettercap-1.5.7xerob/bin/xettercap:24:in `<top (required)>'
/var/lib/gems/2.5.0/gems/xettercap-1.5.7xerob/bin/xettercap:51:in `rescue in <top (required)>': undefined local variable or method `original_argv' for main:Object (NameError)

Envirament: Oracle VM Virtualbox Ubuntu
I am trying to run xerosploit on Ubuntu. When i run the module 'sniff' or 'yplay', it hans there for a long time and no respond are being given.

Can anyone help me to solve this? 
Thank you.
injecthtml
run
/123.html

output
[++] Injecting Html code ... 
[++] Press 'Ctrl + C' to stop . 
Device "2" does not exist.

why?
sudo xerosploit

____  __                     ________         ______       _____ _____ 
__  |/ /_____ ______________ __  ___/________ ___  /______ ___(_)__  /_
__    / _  _ \__  ___/_  __ \_____ \ ___  __ \__  / _  __ \__  / _  __/
_    |  /  __/_  /    / /_/ /____/ / __  /_/ /_  /  / /_/ /_  /  / /_  
/_/|_|  \___/ /_/     \____/ /____/  _  .___/ /_/   \____/ /_/   \__/  
                                     /_/                                    


[+]═══════════[ Author : @LionSec1 _-\|/-_ Website: www.neodrix.com ]═══════════[+]

                      [ Powered by Bettercap and Nmap ]
 
┌═════════════════════════════════════════════════════════════════════════════┐
█                                                                             █
█                         Your Network Configuration                          █ 
█                                                                             █
└═════════════════════════════════════════════════════════════════════════════┘     
 
╒═══════════════╤═══════════════════╤══════════════╤═════════╤════════════╕
│  IP Address   │    MAC Address    │   Gateway    │  Iface  │  Hostname  │
╞═══════════════╪═══════════════════╪══════════════╪═════════╪════════════╡
├───────────────┼───────────────────┼──────────────┼─────────┼────────────┤
│ 192.168.43.39 │ 0C:DD:24:2A:FF:76 │ 192.168.43.1 │  wlan0  │ localhost  │
╘═══════════════╧═══════════════════╧══════════════╧═════════╧════════════╛

╔═════════════╦════════════════════════════════════════════════════════════════════╗
║             ║ XeroSploit is a penetration testing toolkit whose goal is to       ║
║ Information ║ perform man in the middle attacks for testing purposes.            ║
║             ║ It brings various modules that allow to realise efficient attacks. ║
║             ║ This tool is Powered by Bettercap and Nmap.                        ║
╚═════════════╩════════════════════════════════════════════════════════════════════╝

[+] Please type 'help' to view commands.

Traceback (most recent call last):
  File "/opt/xerosploit/xerosploit.py", line 981, in main
    cmd0()
  File "/opt/xerosploit/xerosploit.py", line 866, in cmd0
    cmd_0 = raw_input("\033[1;36m\033[4mXero\033[0m\033[1;36m ➮ \033[1;m").strip()
NameError: name 'raw_input' is not defined

Whenever I try to install it , it shows

root@SaKiB:~# git clone https://github.com/LionSec/xerosploit
fatal: destination path 'xerosploit' already exists and is not an empty directory.
root@SaKiB:~# cd xerosploit && sudo python install.py
 
┌══════════════════════════════════════════════════════════════┐
█                                                              █
█                     Xerosploit Installer                     █
█                                                              █
└══════════════════════════════════════════════════════════════┘     

[++] Please choose your operating system.

1) Ubuntu / Kali linux / Others
2) Parrot OS

>>> 1

[++] Installing Xerosploit ... 
Reading package lists... Done
Reading package lists... Done
Building dependency tree       
Reading state information... Done
Package libgmp3-dev is not available, but is referred to by another package.
This may mean that the package is missing, has been obsoleted, or
is only available from another source
However the following packages replace it:
  libgmp-dev

E: Unable to locate package python-pip
E: Unable to locate package libpcap-dev
E: Package 'libgmp3-dev' has no installation candidate
WARNING:  bin/xettercap is not executable
WARNING:  See http://guides.rubygems.org/specification-reference/ for help
  Successfully built RubyGem
  Name: xettercap
  Version: 1.5.7xerob
  File: xettercap-1.5.7xerob.gem
Building native extensions. This could take a while...
ERROR:  Error installing xettercap-1.5.7xerob.gem:
	ERROR: Failed to build gem native extension.

    current directory: /var/lib/gems/2.5.0/gems/pcaprub-0.13.0/ext/pcaprub_c
/usr/bin/ruby2.5 -r ./siteconf20190924-3866-x2xq0i.rb extconf.rb

[*] Running checks for pcaprub_c code...
platform is x86_64-linux-gnu
checking for ruby/thread.h... yes
checking for rb_thread_blocking_region()... no
checking for rb_thread_call_without_gvl()... yes
checking for pcap_open_live() in -lpcap... no
checking for pcap_setnonblock() in -lpcap... no
creating Makefile

current directory: /var/lib/gems/2.5.0/gems/pcaprub-0.13.0/ext/pcaprub_c
make "DESTDIR=" clean

current directory: /var/lib/gems/2.5.0/gems/pcaprub-0.13.0/ext/pcaprub_c
make "DESTDIR="
compiling pcaprub.c
pcaprub.c:11:10: fatal error: pcap.h: No such file or directory
 #include <pcap.h>
          ^~~~~~~~
compilation terminated.
make: *** [Makefile:243: pcaprub.o] Error 1

make failed, exit code 2

Gem files will remain installed in /var/lib/gems/2.5.0/gems/pcaprub-0.13.0 for inspection.
Results logged to /var/lib/gems/2.5.0/extensions/x86_64-linux/2.5.0/pcaprub-0.13.0/gem_make.out
Xerosploit has been sucessfuly instaled. Execute 'xerosploit' in your terminal.
root@SaKiB:~/xerosploit# xerosploit
bash: xerosploit: command not found
root@SaKiB:~/xerosploit# 

WARNING: bin/xettercap is not executable
please tell me how to fix this
its when i am installing xerosploit

[+] Enter 'run' to execute the 'replace' command.

Xero»modules»replace ➮ run

[+] Insert your image path. (e.g. /home/capitansalami/pictures/fun.png)

Xero»modules»replace ➮ '/home/user/Desktop/cat.jpg' 
Traceback (most recent call last):
  File "/opt/xerosploit/xerosploit.py", line 981, in main
    cmd0()
  File "/opt/xerosploit/xerosploit.py", line 869, in cmd0
    scan()
  File "/opt/xerosploit/xerosploit.py", line 129, in scan
    target_ip()
  File "/opt/xerosploit/xerosploit.py", line 855, in target_ip
    program0()
  File "/opt/xerosploit/xerosploit.py", line 829, in program0
    option()
  File "/opt/xerosploit/xerosploit.py", line 825, in option
    option()
  File "/opt/xerosploit/xerosploit.py", line 635, in option
    replace()
  File "/opt/xerosploit/xerosploit.py", line 622, in replace
    img = Image.open(img_replace)
  File "/usr/lib/python2.7/dist-packages/PIL/Image.py", line 2634, in open
    fp = builtins.open(filename, "rb")
IOError: [Errno 2] No such file or directory: '/home/user/Desktop/cat.jpg '


How to solve this ?

help for running xerosploit in blackarch
The program is not vacant because it found this error in the lines of programming

 File "/root/xerosploit/xerosploit.py", line 26
    from  import DoubleTable
               ^
SyntaxError: invalid syntax
[Finished in 0.0s with exit code 1]
[shell_cmd: python -u "/root/xerosploit/xerosploit.py"]
[dir: /root/xerosploit]
[path: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin]
When i use Xerosploit with deface, only 1 webpage does change into the html :(